-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7
-
-
262031d36 (dev), 72e211878 (dev), d6dae3c6c (6.10)
The QProgressBar has some serious issues in High-DPI mode / when used vertical or in rtl mode as can be seen here:
QT_SCALE_FACTOR = 8, LTR mode:
QT_SCALE_FACTOR = 8, RTL mode:
A testcase to reproduce the problems is attached: main.cpp . For rtl mode start with Qt option '-reverse'.
Found during investigation of QTBUG-116497
- relates to
-
QTBUG-116497 QProgressBar text is not readable with Fusion style
-
- Closed
-
For Gerrit Dashboard: QTBUG-117904 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
510137,8 | Fusion style/QProgressBar: fix High-DPI issues | dev | qt/qtbase | Status: MERGED | +2 | 0 |
672074,4 | Windows11Style: simplify CE_ProgressBarContents painting | dev | qt/qtbase | Status: MERGED | +2 | 0 |
682477,2 | Windows11Style: simplify CE_ProgressBarContents painting | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |